2007-09-18  Peter Bloomfield

	* libbalsa/mailbox.c: scrap libbalsa_mailbox_register_msgno.
	* libbalsa/mailbox.h: ditto.
	* src/balsa-index.c: (bndx_mailbox_message_expunged_cb),
	(balsa_index_load_mailbox_node): change
	BalsaIndex::{current,next}_msgno if necessary when a message
	is expunged.

2007-09-16  Peter Bloomfield

	* src/sendmsg-window.c: allow the letter 'q' in messages, by
	restoring ctrl+Q accelerator for "Queue" (thank you, Jean-Luc);
	restore Sign and Encrypt toolbar buttons (thank you, Albrecht).

2007-09-15  Peter Bloomfield

	* libbalsa/source-viewer.c: mark more strings for translation.
	* src/ab-main.c: ditto.
	* src/toolbar-factory.c: (tm_add_action),
	(balsa_toolbar_model_add_actions),
	(balsa_toolbar_model_add_toggle_actions), (tm_populate):
	tooltips are set by the ui-manager.

2007-09-15  Peter Bloomfield

	* libbalsa/source-viewer.c: (lbsv_app_set_menus): set
	translation domain to NULL to enable translation.
	* src/ab-main.c: (get_main_menu): ditto
	* src/main-window.c: ditto.
	* src/message-window.c: (mw_get_ui_manager): ditto.
	* src/sendmsg-window.c: (sw_get_ui_manager): ditto.

2007-09-15  Peter Bloomfield

	* src/main-window.c: two more missed translations.

2007-09-15  Peter Bloomfield

	* src/main-window.c: translate main menu.
	* src/message-window.c: ditto.
	* src/sendmsg-window.c: ditto.

2007-09-15  Peter Bloomfield

	* src/main-window.c:
	* src/main-window.h:
	* src/message-window.c: (message_window_new):  build
	  --without-gtkhtml.
	* src/sendmsg-window.c: (sendmsg_window_new):
	* src/toolbar-factory.c: (tm_changed_cb), (tm_toolbar_weak_notify),
	(balsa_toolbar_new):
	* src/toolbar-prefs.c: (customize_dialog_cb): clean up ui-manager
	  object-ref management.

2007-09-14  Peter Bloomfield

	* src/main-window.c:
	* src/message-window.c:
	* src/sendmsg-window.c:
	* src/toolbar-factory.c:
	* src/toolbar-factory.h:
	* src/toolbar-prefs.c: move toolbar-model's "changed" signal
	handling to toolbar-factory.c.
